[gd_scene load_steps=35 format=3 uid="uid://q00la62s5ldb"]

[ext_resource type="Script" uid="uid://cp4jaovs7nalj" path="res://main.gd" id="1_dg77c"]
[ext_resource type="Script" uid="uid://c1ntqtosabjsh" path="res://Scripts/main_margin.gd" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://c2jxpj223g87v" path="res://Assets/Fondos/fondo_guia.png" id="2_4c57u"]
[ext_resource type="Texture2D" uid="uid://72gbdc34hq4w" path="res://Assets/Under.png" id="3_efxa6"]
[ext_resource type="FontVariation" uid="uid://b3illvfg3cheg" path="res://Fonts/font_normal.tres" id="4_272bh"]
[ext_resource type="Texture2D" uid="uid://gq4spfbkaut" path="res://Assets/Progress.png" id="4_dg77c"]
[ext_resource type="FontVariation" uid="uid://cqwsdk8pf6boa" path="res://Fonts/font_negrita.tres" id="5_5vw27"]
[ext_resource type="FontFile" uid="uid://bi23m5e21csci" path="res://Fonts/RobotoFlex-VariableFont_GRAD,XOPQ,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://b5cdswkts0mls" path="res://Assets/Clementina_parada.png" id="5_272bh"]
[ext_resource type="Script" uid="uid://c2xmrk5utsnmw" path="res://Scripts/mascot.gd" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://05gmnut8t3co" path="res://Assets/Tutorial/comprobacion_mail.png" id="6_4c57u"]
[ext_resource type="Texture2D" uid="uid://c34spk53dlwq5" path="res://Assets/Clementina_saludando_izq.png" id="11_efxa6"]

[sub_resource type="Gradient" id="Gradient_efxa6"]
colors = PackedColorArray(1, 0.8156863, 0.8, 1, 0.5372549, 0.72156864, 0.8862745, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dg77c"]
gradient = SubResource("Gradient_efxa6")
fill_from = Vector2(0, 0.15925926)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ycdy4"]
texture = SubResource("GradientTexture2D_dg77c")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(2.61109e-06, 0.0873075, 0.304166, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(3.92266e-06, 0.116, 0.376581, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-288, 243)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_272bh")]
}

[sub_resource type="Animation" id="Animation_vivmo"]
resource_name = "despedida"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(480, 192), Vector2(480, 192), Vector2(480, 768)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_272bh"), ExtResource("11_efxa6")]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "transition2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-288, 256), Vector2(128, 256)]
}

[sub_resource type="Animation" id="Animation_kek77"]
resource_name = "transition3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 256), Vector2(64, 288)]
}

[sub_resource type="Animation" id="Animation_5vw27"]
resource_name = "transition4"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 288), Vector2(920, 320)]
}

[sub_resource type="Animation" id="Animation_efxa6"]
resource_name = "transition5"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(160, 224)]
}

[sub_resource type="Animation" id="Animation_dg77c"]
resource_name = "transition6"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 224), Vector2(920, 320)]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "transition7"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 320), Vector2(920, 224)]
}

[sub_resource type="Animation" id="Animation_w48qg"]
resource_name = "transition8"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(920, 224), Vector2(920, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"despedida": SubResource("Animation_vivmo"),
&"transition2": SubResource("Animation_1bvp3"),
&"transition3": SubResource("Animation_kek77"),
&"transition4": SubResource("Animation_5vw27"),
&"transition5": SubResource("Animation_efxa6"),
&"transition6": SubResource("Animation_dg77c"),
&"transition7": SubResource("Animation_ycdy4"),
&"transition8": SubResource("Animation_w48qg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="LabelSettings" id="LabelSettings_efxa6"]
font = ExtResource("5_7mycd")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dg77c"]
line_spacing = 20.0
font = ExtResource("5_7mycd")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_yaehf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2cqfq"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_074og"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mascot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_074og"]
_data = {
&"RESET": SubResource("Animation_yaehf"),
&"fade_in": SubResource("Animation_2cqfq"),
&"fade_out": SubResource("Animation_074og")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dg77c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4c57u")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32
script = ExtResource("2_1bvp3")

[node name="TextureProgressBar" type="TextureProgressBar" parent="MainMargin"]
layout_mode = 2
size_flags_horizontal = 4
max_value = 15.0
value = 1.0
texture_under = ExtResource("3_efxa6")
texture_progress = ExtResource("4_dg77c")

[node name="TextContainer" type="MarginContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 96

[node name="MainContainer" type="VBoxContainer" parent="MainMargin/TextContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="RichTextLabel" parent="MainMargin/TextContainer/MainContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_272bh")
theme_override_fonts/bold_font = ExtResource("5_5vw27")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Description" type="RichTextLabel" parent="MainMargin/TextContainer/MainContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_272bh")
theme_override_fonts/bold_font = ExtResource("5_5vw27")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="ImageContainer" type="PanelContainer" parent="MainMargin/TextContainer/MainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ycdy4")

[node name="Image" type="TextureRect" parent="MainMargin/TextContainer/MainContainer/ImageContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("6_4c57u")
stretch_mode = 2

[node name="ButtonContainer" type="HSplitContainer" parent="MainMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
dragging_enabled = false

[node name="BackButton" type="Button" parent="MainMargin/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(128, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.05376742, 0.26932824, 0.34293354, 1)
theme_override_fonts/font = ExtResource("5_7mycd")
theme_override_font_sizes/font_size = 24
text = "Atrás"
flat = true

[node name="MainButton" type="Button" parent="MainMargin/ButtonContainer"]
custom_minimum_size = Vector2(288, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_7mycd")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_272bh")
text = "Comenzar"

[node name="Info" type="Button" parent="MainMargin"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_272bh")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_272bh")
text = "i"

[node name="Mascot" type="TextureRect" parent="."]
custom_minimum_size = Vector2(340, 266)
layout_mode = 0
offset_left = -288.0
offset_top = 243.0
offset_right = 52.00049
offset_bottom = 509.00024
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_272bh")
expand_mode = 3
stretch_mode = 5
script = ExtResource("5_lquwl")

[node name="MascotAnimations" type="AnimationPlayer" parent="Mascot"]
libraries = {
&"": SubResource("AnimationLibrary_7mycd")
}

[node name="Credits" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1088, 544)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_efxa6")

[node name="MarginCredits" type="MarginContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32

[node name="CreditsContainer" type="VBoxContainer" parent="Credits/MarginCredits"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Team" type="Label" parent="Credits/MarginCredits/CreditsContainer"]
layout_mode = 2
text = "Equipo de Trabajo"
label_settings = SubResource("LabelSettings_efxa6")

[node name="Members" type="Label" parent="Credits/MarginCredits/CreditsContainer"]
layout_mode = 2
text = "Secretaria Académica: Lic. Paula Zabaleta
Directora General de Acceso y Apoyo al Estudiante: Lic. Luciana Aguilar
Directora de Pasantía y Graduados: Lic. Julia Thea
Dirección: Eda Lía Artola
Programación: Matías Nahuel González Sandoval
Diseño: Florencia Belate Dietrich
Coordinación: Néstor Arriola
Hace click para regresar a la guía"
label_settings = SubResource("LabelSettings_dg77c")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]

[node name="CreditsAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_074og")
}

[node name="Version" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.235294)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.2.3"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="value_changed" from="MainMargin/TextureProgressBar" to="MainMargin" method="_on_progress_bar_value_changed"]
[connection signal="value_changed" from="MainMargin/TextureProgressBar" to="Mascot" method="_on_progress_bar_value_changed"]
[connection signal="pressed" from="MainMargin/ButtonContainer/BackButton" to="MainMargin" method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMargin/ButtonContainer/MainButton" to="MainMargin" method="_on_main_button_pressed"]
[connection signal="pressed" from="MainMargin/Info" to="." method="_on_info_pressed"]
[connection signal="animation_finished" from="Mascot/MascotAnimations" to="MainMargin" method="_on_mascot_animations_animation_finished"]
[connection signal="animation_finished" from="Mascot/MascotAnimations" to="Mascot" method="_on_mascot_animations_animation_finished"]
